# ircvpn

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  auto_fd.h  auto_fd.hpp  irc_client.cpp  irc_client.hpp  irc_vpn.cpp  irc_vpn.hpp  main.cpp  main.cxx  system_error.h  system_error.hpp  tun_device.cpp  tun_device.cxx  tun_device.h  tun_device.hpp
vagrant/: Vagrantfile
